--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h1>Básico</h1>
-                <p class="mb-0">5 Megas por $239.00 al Mes</p>
+                <p class="mb-0">$299.00 al Mes</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -100,7 +100,7 @@
               <span class="caption-content">
                 <h1>Medio</h1>
                 <p class="mb-0">
-                  10 Megas por $349.00 al Mes</p>
+                  $399.00 al Mes</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -111,7 +111,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h1>Plus</h1>
-                <p class="mb-0"> 15 Megas por $449.00 al Mes</p>
+                <p class="mb-0">$499.00 al Mes</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
@@ -122,7 +122,7 @@
             <span class="caption">
               <span class="caption-content">
                 <h1>X</h1>
-                <p class="mb-0"> 20 Megas por $589.00 al Mes</p>
+                <p class="mb-0">$589.00 al Mes</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
