--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <a class="portfolio-item" href="#portfolio">
             <span class="caption">
               <span class="caption-content">
-                <h1>Básico</h1>
+                <h1>PLAN 5 Mbps</h1>
                 <p class="mb-0">$299.00 al Mes</p>
               </span>
             </span>
@@ -98,7 +98,7 @@
           <a class="portfolio-item" href="#portfolio">
             <span class="caption">
               <span class="caption-content">
-                <h1>Medio</h1>
+                <h1>PLAN 10 Mbps</h1>
                 <p class="mb-0">
                   $399.00 al Mes</p>
               </span>
@@ -110,7 +110,7 @@
           <a class="portfolio-item" href="#portfolio">
             <span class="caption">
               <span class="caption-content">
-                <h1>Plus</h1>
+                <h1>PLAN 15 Mbps</h1>
                 <p class="mb-0">$499.00 al Mes</p>
               </span>
             </span>
@@ -121,7 +121,7 @@
             <a class="portfolio-item" href="#portfolio">
             <span class="caption">
               <span class="caption-content">
-                <h1>X</h1>
+                <h1>PLAN 20 Mbps</h1>
                 <p class="mb-0">$589.00 al Mes</p>
               </span>
             </span>
